RESOLVED FIXED291874
[JSC] Fix use-before-set bug in LoopUnrollingPhase::data.loopTarget() for debug assertion
https://bugs.webkit.org/show_bug.cgi?id=291874
Summary [JSC] Fix use-before-set bug in LoopUnrollingPhase::data.loopTarget() for deb...
Yijia Huang
Reported 2025-04-21 17:14:18 PDT
Attachments
Yijia Huang
Comment 1 2025-04-21 17:19:23 PDT
EWS
Comment 2 2025-04-22 12:33:12 PDT
Committed 293970@main (dc251dd885cd): <https://commits.webkit.org/293970@main> Reviewed commits have been landed. Closing PR #44356 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.