[JSC] Fix use-before-set bug in LoopUnrollingPhase::data.loopTarget() for debug assertion https://bugs.webkit.org/show_bug.cgi?id=291874 rdar://149721355

Reviewed by Yusuke Suzuki.

The loop unrolling analysis was calling data.loopTarget(tail) in an assertion
before setting data.invertCondition, leading to a use-before-set issue in debug builds:

    ASSERT(tail->terminal()->op() == Branch && data.loopTarget(tail)->isJumpPad());

To fix this, we changed inverseCondition to std::optional<bool> invertCondition,
and introduced a shouldInvertCondition() accessor that asserts the value is initialized.

This ensures loopTarget() and exitTarget() accessors are only used after
invertCondition is properly set, preventing assertion failures and improving
the robustness of loop analysis logic.

* Source/JavaScriptCore/dfg/DFGLoopUnrollingPhase.cpp:
(JSC::DFG::LoopUnrollingPhase::LoopData::shouldInvertCondition const):
(JSC::DFG::LoopUnrollingPhase::LoopData::loopTarget const):
(JSC::DFG::LoopUnrollingPhase::LoopData::exitTarget const):
(JSC::DFG::LoopUnrollingPhase::locateTail):
(JSC::DFG::LoopUnrollingPhase::identifyInductionVariable):
(JSC::DFG::LoopUnrollingPhase::LoopData::dump const):
(JSC::DFG::LoopUnrollingPhase::comparisonFunction):

Canonical link: https://commits.webkit.org/293970@main